--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,5 @@
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 @import "./bicicletas/bicicletas-lista.css";
+@import "./home/tecnologia.css";
+@import "./home/parceiros.css";
