--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "./global/glocal.css";
 @import "./home/introducao.css";
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 @import "./bicicletas/bicicletas-lista.css";
@@ -14,3 +15,7 @@
 @import "./bicicletas/bicicletas.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
