--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,4 @@
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
 @import "./orcamento/orcamento.css";
+@import "./utilidades/animacao.css";
